--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -27,6 +27,7 @@
                         <div class="mb-3">
                             <label class="form-label text-white">사용할 이메일</label>
                             <input type="email" class="form-control" name="email">
+<!--                            여기 뒷 부분 이름이 달라도(디티오랑 달라도? 엔티티랑 달라도 안들어감)-->
                         </div>
 
                         <div class="mb-3">
