form login -> json login : OK

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -27,7 +27,7 @@
                         <div class="mb-3">
                             <label class="form-label text-white">이메일 입력해주세요!</label>
 <!--                            <input type="email" class="form-control" name="username">-->
-                            <input type="email" class="form-control" name="username" id="email">  <!-- ID 추가 -->
+                            <input type="email" class="form-control" name="username" id="username">  <!-- ID 추가 -->
 
                         </div>
 
