--- a/src/main/resources/templates/service.html
+++ b/src/main/resources/templates/service.html
@@ -22,7 +22,7 @@
                 <p class="text-white-50 mt-2 mb-5">이용하실 서비스를 선택하세요</p>
 
                 <div class = "mb-2">
-                    <form action="/logout" method="POST">
+                    <form action="/api/logout" method="POST">
                         <button type="submit" class="btn btn-primary">로그아웃</button>
                     </form>
 
