--- a/src/main/resources/templates/oauthLogin.html
+++ b/src/main/resources/templates/oauthLogin.html
@@ -86,28 +86,28 @@
                 </div>
 
                 <div class="mb-2">
-                <a href="/signup" class="btn btn-secondary btn-block">회원가입</a>
+                    <a href="/signup" class="btn btn-secondary btn-block">회원가입1</a>
                 </div>
 
 
                 <!-- 소셜 로그인 버튼 -->
-                <div class = "mb-3">
-                    <a href="/oauth2/authorization/google">
-                        <img src="/img/google.png">
-                    </a>
-                </div>
-                <div class = "mb-3">
-                    <a href="/oauth2/authorization/kakao">
-                        <img src="/img/kakao.png">
-                    </a>
-                </div>
+<!--                <div class = "mb-3">-->
+<!--                    <a href="/oauth2/authorization/google">-->
+<!--                        <img src="/img/google.png">-->
+<!--                    </a>-->
+<!--                </div>-->
+<!--                <div class = "mb-3">-->
+<!--                    <a href="/oauth2/authorization/kakao">-->
+<!--                        <img src="/img/kakao.png">-->
+<!--                    </a>-->
+<!--                </div>-->
 
             </div>
         </div>
     </div>
 </section>
 
-<script src="/js/loginJson.js"></script>
+<script src="/loginJson.js"></script>
 
 </body>
 </html>
